// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components Container 1`] = `
<div
  className="container-fluid"
>
  Lorem ipsum dolor met.
</div>
`;

exports[`Storyshots Components Loader 1`] = `
<div
  className="loader"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Storyshots Components Spinner 1`] = `
<span
  className="spinner-border spinner-border-sm"
  role="status"
/>
`;

exports[`Storyshots Components/Alert Danger 1`] = `
<div
  className="alert alert-danger"
  role="alert"
>
  A simple danger alert with
   
  <a
    className="alert-link"
    href="#"
  >
    an example link
  </a>
  . Give it a click if you like.
</div>
`;

exports[`Storyshots Components/Alert Info 1`] = `
<div
  className="alert alert-info"
  role="alert"
>
  A simple info alert with
   
  <a
    className="alert-link"
    href="#"
  >
    an example link
  </a>
  . Give it a click if you like.
</div>
`;

exports[`Storyshots Components/Alert Success 1`] = `
<div
  className="alert alert-success"
  role="alert"
>
  A simple success alert with
   
  <a
    className="alert-link"
    href="#"
  >
    an example link
  </a>
  . Give it a click if you like.
</div>
`;

exports[`Storyshots Components/Alert Warning 1`] = `
<div
  className="alert alert-warning"
  role="alert"
>
  A simple danger alert with
   
  <a
    className="alert-link"
    href="#"
  >
    an example link
  </a>
  . Give it a click if you like.
</div>
`;

exports[`Storyshots Components/Button Danger 1`] = `
<button
  className="btn btn-danger has-text"
  disabled={false}
  type="submit"
>
  Danger button
</button>
`;

exports[`Storyshots Components/Button Light 1`] = `
<button
  className="btn btn-light has-text"
  disabled={false}
  type="submit"
>
  Light button
</button>
`;

exports[`Storyshots Components/Button Only Icon 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  type="submit"
>
  <i
    className="icon far fa-message fa-fw"
  />
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  className="btn btn-primary has-text"
  disabled={false}
  type="submit"
>
  Primary button
</button>
`;

exports[`Storyshots Components/Button Success 1`] = `
<button
  className="btn btn-success has-text"
  disabled={false}
  type="submit"
>
  Success button
</button>
`;

exports[`Storyshots Components/Button With Icon 1`] = `
<button
  className="btn btn-primary has-text"
  disabled={false}
  type="submit"
>
  <i
    className="icon far fa-message fa-fw"
  />
  With icon
</button>
`;

exports[`Storyshots Components/Card Minimal 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    This is some text within a card body
  </div>
</div>
`;

exports[`Storyshots Components/Card With Header And Footer 1`] = `
<div
  className="card"
>
  <div
    className="card-header"
  >
    Card Title
  </div>
  <div
    className="card-body"
  >
    This is some text within a card body
  </div>
  <div
    className="card-footer"
  >
    Card Footer
  </div>
</div>
`;

exports[`Storyshots Components/Icon Fixed Width 1`] = `
Array [
  <i
    className="icon fas fa-address-card fa-fw"
  />,
  <br />,
  <i
    className="icon far fa-lemon fa-fw"
  />,
  <br />,
  <i
    className="icon far fa-square-check fa-fw"
  />,
  <br />,
  <i
    className="icon fas fa-bandage fa-fw"
  />,
]
`;

exports[`Storyshots Components/Icon Regular 1`] = `
<i
  className="icon far fa-address-card"
/>
`;

exports[`Storyshots Components/Icon Solid 1`] = `
<i
  className="icon fas fa-address-card"
/>
`;

exports[`Storyshots Layouts Centered 1`] = `
<div
  className="layout-centered"
>
  <div
    className="container-fluid"
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <h5
          className="card-title"
        >
          Centered Layout
        </h5>
        <p
          className="card-text"
        >
          This card is vertically centered.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages Loading 1`] = `
<div
  className="layout-centered"
>
  <div
    className="container-fluid"
  >
    <div
      className="page-loading"
    />
  </div>
</div>
`;
